--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-measure": "^2.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^2.3.0",
+    "react-tooltip": "^4.2.21",
     "stream-browserify": "^3.0.0",
     "url-join": "^4.0.0",
     "wkt": "^0.1.1",
