--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,13 +3,12 @@ name: Docker Publishing
 on:
   push:
     branches:
-      - '*'
+      - "*"
     tags:
       - '[0-9]+\.[0-9]+\.[0-9]+'
 
 jobs:
   publish:
-
     runs-on: ubuntu-20.04
 
     steps:
@@ -18,6 +17,10 @@ jobs:
         run: |
           git fetch --prune --unshallow
           echo "REACT_APP_VERSION=$(git describe --tags --abbrev=0) ($(git rev-parse --abbrev-ref HEAD):$(git log -1 --format=%h))" >> $GITHUB_ENV
+      - name: Build npm package
+        run: |
+          npm ci
+          npm run build
       - name: Publish to Registry
         uses: docker/build-push-action@v1
         with:
