--- a/package.json
+++ b/package.json
@@ -37,19 +37,25 @@
     "xml-js": "^1.6.9"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
     "jest-each": "^28.1.1",
-    "prettier": "^1.16.4",
-    "react-test-renderer": "^16.8.6"
+    "lint-staged": "^15.3.0",
+    "prettier": "3.2.2",
+    "react-test-renderer": "^16.8.6",
+    "serve": "^13.0.2"
   },
   "scripts": {
     "start": "craco start",
     "start-env": "REACT_APP_VERSION=\"$(./generate-commitish.sh)\" craco start",
-    "build": "craco build",
-    "build-serve": "craco build && serve -s build -l 3001",
+    "build": "REACT_APP_APP_VERSION=$(bash ./generate-commitish.sh) && craco build",
+    "build-serve": "craco build && serve -s build -l 3004",
     "build-update": "cp ./public/external-text/default.yaml ./build/external-text/default.yaml",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "reinstall": "rm -rf ./node_modules && npm install"
+    "reinstall": "rm -rf ./node_modules && npm install",
+    "prepare": "husky",
+    "format": "prettier --write .",
+    "check-format": "prettier --check ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -64,5 +70,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  }
 }
