Update package versions and fix errors:
- Update react markdown, use rehypeRaw plugin to mimic old behaviour
- Remove pcic-external-text but introduce deepdash as needed in local module
- Swap out old react-loader for react-spinners
- Fix key warnings

--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "buffer": "^6.0.3",
     "c3": "^0.7.20",
     "classnames": "^2.2.6",
+    "deepdash": "^4.2.12",
     "js-yaml": "^3.13.1",
     "leaflet": "^1.8.0",
     "lethargy": "^1.0.9",
     "lodash": "^4.17.21",
     "path-browserify": "^1.0.1",
     "pcic-react-components": "git+https://git@github.com/pacificclimate/pcic-react-components.git#3.1.0",
-    "pcic-react-external-text": "git+https://git@github.com/pacificclimate/pcic-react-external-text.git#1.0.0",
-    "pcic-react-leaflet-components": "git+https://git@github.com/pacificclimate/pcic-react-leaflet-components.git#3.0.1",
+    "pcic-react-leaflet-components": "git+https://git@github.com/pacificclimate/pcic-react-leaflet-components.git#tile-url-as-prop",
     "process": "^0.11.10",
     "proj4": "^2.7.5",
     "proj4leaflet": "^1.0.2",
@@ -26,11 +26,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^3.5.0",
     "react-leaflet": "^4.0.0",
-    "react-loader": "^2.4.5",
-    "react-markdown": "^4.0.6",
-    "react-measure": "^2.3.0",
+    "react-markdown": "^9.0.0",
     "react-scripts": "^5.0.1",
-    "react-select": "^2.3.0",
+    "react-spinners": "^0.15.0",
+    "rehype-raw": "^7.0.0",
     "stream-browserify": "^3.0.0",
     "url-join": "^4.0.0",
     "wkt": "^0.1.1",
@@ -41,7 +40,6 @@
     "jest-each": "^28.1.1",
     "lint-staged": "^15.3.0",
     "prettier": "3.2.2",
-    "react-test-renderer": "^16.8.6",
     "serve": "^13.0.2"
   },
   "scripts": {
