--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "start-env": "REACT_APP_VERSION=\"$(./generate-commitish.sh)\" craco start",
+    "start-env": "REACT_APP_APP_VERSION=\"$(./generate-commitish.sh)\" craco start",
     "build": "REACT_APP_APP_VERSION=$(bash ./generate-commitish.sh) && craco build",
     "build-serve": "craco build && serve -s build -l 3004",
     "build-update": "cp ./public/external-text/default.yaml ./build/external-text/default.yaml",
